--- a/6379/redis.conf
+++ b/6379/redis.conf
@@ -2,3 +2,14 @@
 
 bind 127.0.0.1
 port 6379
+timeout 0
+tcp-keepalive 300
+
+daemonize no
+pidfile /var/run/redis_6379.pid
+
+loglevel notice
+logfile "./redis-server.log"
+
+
+databases 16
