--- a/6379/redis.conf
+++ b/6379/redis.conf
@@ -2,14 +2,23 @@
 
 bind 127.0.0.1
 port 6379
-timeout 0
-tcp-keepalive 300
-
-daemonize no
-pidfile /var/run/redis_6379.pid
-
-loglevel notice
-logfile "./redis-server.log"
 
 
-databases 16
+
+# snapshotting
+
+# save 10 1
+# rdbcompression yes
+# rdbchecksum yes
+# dbfilename dump.rdb
+# dir .
+# stop-writes-on-bgsave-error yes
+
+# aof
+
+appendonly yes
+appendfilename "appendonly.aof"
+dir .
+appendfsync everysec
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
