--- a/6379/redis.conf
+++ b/6379/redis.conf
@@ -1,24 +1,6 @@
 
-
 bind 127.0.0.1
 port 6379
 
-
-
-# snapshotting
-
-# save 10 1
-# rdbcompression yes
-# rdbchecksum yes
-# dbfilename dump.rdb
-# dir .
-# stop-writes-on-bgsave-error yes
-
-# aof
-
-appendonly yes
-appendfilename "appendonly.aof"
-dir .
-appendfsync everysec
-auto-aof-rewrite-percentage 100
-auto-aof-rewrite-min-size 64mb
+# logfile ./redis.log
+# loglevel notice
