--- a/cluster/7001/redis.conf
+++ b/cluster/7001/redis.conf
@@ -1,5 +1,12 @@
-port 7001
+port 0
+tls-port 7001
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 appendonly yes
+
+tls-ca-cert-file /Users/nag/wl-redis/tls/ca.crt
+tls-cert-file /Users/nag/wl-redis/tls/redis-server.crt
+tls-key-file /Users/nag/wl-redis/tls/redis-server.key
+tls-auth-clients yes
+tls-replication yes
