--- a/cluster/7002/redis.conf
+++ b/cluster/7002/redis.conf
@@ -1,5 +1,16 @@
-port 7002
+
+port 0
+tls-port 7002
+
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 appendonly yes
+
+
+tls-ca-cert-file /Users/nag/wl-redis/tls/ca.crt
+tls-cert-file /Users/nag/wl-redis/tls/redis-server.crt
+tls-key-file /Users/nag/wl-redis/tls/redis-server.key
+tls-auth-clients yes
+tls-cluster yes
+tls-replication yes
